--- a/.github/workflows/frog.yml
+++ b/.github/workflows/frog.yml
@@ -29,54 +29,54 @@ jobs:
         
     - name: Create FROG report
       run: |
-        runfrog -i ./models/iCstr1054FB23.xml -o ./FROG/Cstr_TS_FROG.omex
-        runfrog -i ./models/iCstr1197FB23.xml -o ./FROG/Cstr_1197_FROG.omex
-        runfrog -i ./models/iCstr1115FB23.xml -o ./FROG/Cstr_1115_FROG.omex
-        runfrog -i ./models/iCstr1116FB23.xml -o ./FROG/Cstr_1116_FROG.omex
-        runfrog -i ./models/iCstrKCNa01FB23.xml -o ./FROG/Cstr_iCstrKCNa01FB23_FROG.omex
+        runfrog -i ./models/iCstr1054FB23.xml -o ./FROG/iCstr1054FB23_FROG.omex
+        runfrog -i ./models/iCstr1197FB23.xml -o ./FROG/iCstr1197FB23_FROG.omex
+        runfrog -i ./models/iCstr1115FB23.xml -o ./FROG/iCstr1115FB23_FROG.omex
+        runfrog -i ./models/iCstr1116FB23.xml -o ./FROG/iCstr1116FB23_FROG.omex
+        runfrog -i ./models/iCstrKCNa01FB23.xml -o ./FROG/iCstrKCNa01FB23_FROG.omex
       
     - name: Unzip Omex files for easier access
       run: |
-        unzip ./FROG/Cstr_TS_FROG.omex -d ./FROG/Cstr_TS
-        rm ./FROG/Cstr_TS/model.xml
-        rm ./FROG/Cstr_TS/manifest.xml
-        cp -R ./FROG/Cstr_TS/FROG/cameo ./FROG/Cstr_TS
-        rm -R ./FROG/Cstr_TS/FROG/cameo
-        cp -R ./FROG/Cstr_TS/FROG/cobrapy ./FROG/Cstr_TS
-        rm -R ./FROG/Cstr_TS/FROG/cobrapy
-        rm -r ./FROG/Cstr_TS/FROG/
-        unzip ./FROG/Cstr_1197_FROG.omex -d ./FROG/Cstr_1197
-        rm ./FROG/Cstr_1197/model.xml
-        rm ./FROG/Cstr_1197/manifest.xml
-        cp -R ./FROG/Cstr_1197/FROG/cameo ./FROG/Cstr_1197
-        rm -R ./FROG/Cstr_1197/FROG/cameo
-        cp -R ./FROG/Cstr_1197/FROG/cobrapy ./FROG/Cstr_1197
-        rm -R ./FROG/Cstr_1197/FROG/cobrapy
-        rm -r ./FROG/Cstr_1197/FROG/
-        unzip ./FROG/Cstr_1115_FROG.omex -d ./FROG/Cstr_1115
-        rm ./FROG/Cstr_1115/model.xml
-        rm ./FROG/Cstr_1115/manifest.xml
-        cp -R ./FROG/Cstr_1115/FROG/cameo ./FROG/Cstr_1115
-        rm -R ./FROG/Cstr_1115/FROG/cameo
-        cp -R ./FROG/Cstr_1115/FROG/cobrapy ./FROG/Cstr_1115
-        rm -R ./FROG/Cstr_1115/FROG/cobrapy
-        rm -r ./FROG/Cstr_1115/FROG/
-        unzip ./FROG/Cstr_1116_FROG.omex -d ./FROG/Cstr_1116
-        rm ./FROG/Cstr_1116/model.xml
-        rm ./FROG/Cstr_1116/manifest.xml
-        cp -R ./FROG/Cstr_1116/FROG/cameo ./FROG/Cstr_1116
-        rm -R ./FROG/Cstr_1116/FROG/cameo
-        cp -R ./FROG/Cstr_1116/FROG/cobrapy ./FROG/Cstr_1116
-        rm -R ./FROG/Cstr_1116/FROG/cobrapy
-        rm -r ./FROG/Cstr_1116/FROG/
-        unzip ./FROG/Cstr_iCstrKCNa01FB23_FROG.omex -d ./FROG/Cstr_iCstrKCNa01FB23
-        rm ./FROG/Cstr_iCstrKCNa01FB23/model.xml
-        rm ./FROG/Cstr_iCstrKCNa01FB23/manifest.xml
-        cp -R ./FROG/Cstr_iCstrKCNa01FB23/FROG/cameo ./FROG/Cstr_iCstrKCNa01FB23
-        rm -R ./FROG/Cstr_iCstrKCNa01FB23/FROG/cameo
-        cp -R ./FROG/Cstr_iCstrKCNa01FB23/FROG/cobrapy ./FROG/Cstr_iCstrKCNa01FB23
-        rm -R ./FROG/Cstr_iCstrKCNa01FB23/FROG/cobrapy
-        rm -r ./FROG/Cstr_iCstrKCNa01FB23/FROG/
+        unzip ./FROG/iCstr1054FB23_FROG.omex -d ./FROG/iCstr1054FB23
+        rm ./FROG/iCstr1054FB23/model.xml
+        rm ./FROG/iCstr1054FB23/manifest.xml
+        cp -R ./FROG/iCstr1054FB23/FROG/cameo ./FROG/iCstr1054FB23
+        rm -R ./FROG/iCstr1054FB23/FROG/cameo
+        cp -R ./FROG/iCstr1054FB23/FROG/cobrapy ./FROG/iCstr1054FB23
+        rm -R ./FROG/iCstr1054FB23/FROG/cobrapy
+        rm -r ./FROG/iCstr1054FB23/FROG/
+        unzip ./FROG/iCstr1197FB23_FROG.omex -d ./FROG/iCstr1197FB23
+        rm ./FROG/iCstr1197FB23/model.xml
+        rm ./FROG/iCstr1197FB23/manifest.xml
+        cp -R ./FROG/iCstr1197FB23/FROG/cameo ./FROG/iCstr1197FB23
+        rm -R ./FROG/iCstr1197FB23/FROG/cameo
+        cp -R ./FROG/iCstr1197FB23/FROG/cobrapy ./FROG/iCstr1197FB23
+        rm -R ./FROG/iCstr1197FB23/FROG/cobrapy
+        rm -r ./FROG/iCstr1197FB23/FROG/
+        unzip ./FROG/iCstr1115FB23_FROG.omex -d ./FROG/iCstr1115FB23
+        rm ./FROG/iCstr1115FB23/model.xml
+        rm ./FROG/iCstr1115FB23/manifest.xml
+        cp -R ./FROG/iCstr1115FB23/FROG/cameo ./FROG/iCstr1115FB23
+        rm -R ./FROG/iCstr1115FB23/FROG/cameo
+        cp -R ./FROG/iCstr1115FB23/FROG/cobrapy ./FROG/iCstr1115FB23
+        rm -R ./FROG/iCstr1115FB23/FROG/cobrapy
+        rm -r ./FROG/iCstr1115FB23/FROG/
+        unzip ./FROG/iCstr1116FB23_FROG.omex -d ./FROG/iCstr1116FB23
+        rm ./FROG/iCstr1116FB23/model.xml
+        rm ./FROG/iCstr1116FB23/manifest.xml
+        cp -R ./FROG/iCstr1116FB23/FROG/cameo ./FROG/iCstr1116FB23
+        rm -R ./FROG/iCstr1116FB23/FROG/cameo
+        cp -R ./FROG/iCstr1116FB23/FROG/cobrapy ./FROG/iCstr1116FB23
+        rm -R ./FROG/iCstr1116FB23/FROG/cobrapy
+        rm -r ./FROG/iCstr1116FB23/FROG/
+        unzip ./FROG/iCstrKCNa01FB23_FROG.omex -d ./FROG/iCstrKCNa01FB23
+        rm ./FROG/iCstrKCNa01FB23/model.xml
+        rm ./FROG/iCstrKCNa01FB23/manifest.xml
+        cp -R ./FROG/iCstrKCNa01FB23/FROG/cameo ./FROG/iCstrKCNa01FB23
+        rm -R ./FROG/iCstrKCNa01FB23/FROG/cameo
+        cp -R ./FROG/iCstrKCNa01FB23/FROG/cobrapy ./FROG/iCstrKCNa01FB23
+        rm -R ./FROG/iCstrKCNa01FB23/FROG/cobrapy
+        rm -r ./FROG/iCstrKCNa01FB23/FROG/
 
     - name: Commit FROG report
       id: commit
